--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<!--<resources>
     <color name="ic_launcher_background">#FFFFFFFF</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -10,4 +10,17 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FFFF0000</color>
     <color name="background">#FFEEEEEE</color>
+</resources>&ndash;&gt;-->
+
+<resources>
+    <color name="ic_launcher_background">#FFEB3B</color> <!-- イエロー -->
+    <color name="purple_200">#9C27B0</color> <!-- パープル -->
+    <color name="purple_500">#673AB7</color> <!-- ディープパープル -->
+    <color name="purple_700">#3F51B5</color> <!-- インディゴ -->
+    <color name="teal_200">#03A9F4</color> <!-- ライトブルー -->
+    <color name="teal_700">#009688</color> <!-- ティール -->
+    <color name="black">#000000</color> <!-- ブラック -->
+    <color name="white">#FFFFFF</color> <!-- ホワイト -->
+    <color name="red">#F44336</color> <!-- レッド -->
+    <color name="background">#FFFFFF</color> <!-- 背景色を白に設定 -->
 </resources>
