--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -120,7 +120,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/debit"
                         android:inputType="none"
-                        android:padding="16dp" />
+                        android:padding="16dp"
+                        android:singleLine="true"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -144,7 +145,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/credit"
                         android:inputType="none"
-                        android:padding="16dp" />
+                        android:padding="16dp"
+                        android:singleLine="true" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
