--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -15,22 +15,25 @@
             android:id="@+id/created_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:text="6月10日" />
+            android:layout_weight="0.55"
+            tools:text="12月10日" />
+        <Space
+            android:layout_width="@dimen/activity_vertical_margin"
+            android:layout_height="0dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/debit_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="left"
             tools:text="吉野家" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/price_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:gravity="end"
             tools:text="551円" />
 
@@ -43,7 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="left"
             tools:text="現金" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
